Fix vertical align

--- a/resources/assets/sass/_elements.sass
+++ b/resources/assets/sass/_elements.sass
@@ -7,6 +7,21 @@
 	&.faded
 		opacity: 0.5
 
+	.promise_v_item
+		display: flex
+		align-items: center
+		justify-content: center
+		flex-wrap: wrap
+
+		.flow-promise-icon
+			display: block
+
+		.flow-promise-text
+			padding: 0 !important
+			display: block
+			flex: 1 0 0
+			min-height: 0
+
 	.pill_section
 		width: 50px
 		background: #f8f8f8
